cha-pre-live-flux2/cha-eks-5a/namespaces/extids-performance2/network-policy-apps.yaml
####################################################
## Allow ingress from extids-performance2 and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-extids-performance2
  namespace: extids-performance2
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: extids-performance2
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from extids-performance2 ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-extids-performance2
  namespace: extids-performance2
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: extids-performance2

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: extids-performance2
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: extids-performance2
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
    - namespaceSelector:
        matchLabels:
          name: icis-monitoring

#########################################
## Allow SQL Server egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sql-server
  namespace: extids-performance2
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 1433
      protocol: TCP
